# geoparquet-overviews

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  SPEC.md
.github/workflows/: deploy-viewer.yml
converter/: CLAUDE.md  README.md  pyproject.toml
converter/examples/: make_sample.py
converter/src/geoparquet_overviews/: __init__.py  cli.py  convert.py  footer.py
converter/tests/: test_convert.py
docs/: how-no-duplication-works.md
docs/investigations/: 2026-07-04-v020-investigation.md  2026-07-06-per-zoom-overfetch.md  2026-07-07-v030-density-visibility-fixes.md
docs/superpowers/plans/: 2026-07-04-v0.2.0-overviews.md  2026-07-09-band-budget-and-bbox-default.md  2026-07-09-light-overviews.md
docs/superpowers/specs/: 2026-07-05-pan-render-path-design.md  2026-07-09-band-budget-and-bbox-default-design.md  2026-07-09-light-overviews-design.md
viewer/: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.bench.config.ts
viewer/bench/: RESULTS.md  compare.bench.ts
viewer/public/: sample.parquet  versions.json
viewer/scripts/: generate-fixture.sh
viewer/src/: main.ts
viewer/src/core/: events.ts  phase.test.ts  phase.ts
viewer/src/data/: byte-cache.test.ts  byte-cache.ts  counts.test.ts  counts.ts  feature-detail.ts  file-cache.test.ts  file-cache.ts  flat-cache.test.ts  flat-cache.ts  layout.test.ts  layout.ts  manifest.test.ts  manifest.ts  metadata.test.ts  metadata.ts  native-decode.integration.test.ts  pageindex.test.ts  pageindex.ts  plan-signature.test.ts  (+5 more)
(+33 files in other folders)
