[project]
name = "geoparquet-overviews"
version = "0.1.0"
description = "Convert any GeoParquet into the overviews layout, one file a browser can preview and a SQL engine can read."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "pyarrow>=24.0.0",
    "shapely>=2.1.2",
    "numpy>=2.5.0",
    "click>=8.3.0",
]

[project.scripts]
gpo = "geoparquet_overviews.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geoparquet_overviews"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.14",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
